--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body{
     height: 100vh;
     background-color: rgb(169, 134, 173);
     color: rgb(0, 0, 0);
-    font-family: cursive;
+    font-family: 'Josefin Slab', serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
