--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Josefin Slab', serif;
     background-color: #E5BDFF;
     line-height: 2.2;
     font-size: 0.875rem;
