--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,181 @@
-body{
-    padding: 0;
+/* Begin Fonts Definition  */
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@font-face {
+    font-family: 'Clash Display';
+    src: url('/asset/fonts/ClashDisplay-Variable.ttf');
+}
+
+@font-face {
+    font-family: 'Clash Grotesk';
+    src: url('/asset/fonts/ClashGrotesk-Variable.ttf');
+}
+
+/* End Fonts Definition  */
+
+/* Reset Proprite */
+* {
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    /* background-color: rgb(255, 255, 255); */
+}
+
+/* End Reset Proprite */
+/* ---------------------------------------------------------------------------- */
+
+/* Outer Grid  */
+
+body {
+    width: 100vw;
     height: 100vh;
-    background-color: rgb(169, 134, 173);
-    color: rgb(0, 0, 0);
-    font-family: 'Josefin Slab', serif;
-}
-
-.container{
-    text-align: center;
-    width: 400px;
-    position: relative;
-}
-
-.counter{
-    font-size: 40px;
-}
-.loading-bar-back{
-    position: absolute;
-    height: 8px;
-    background-color: rgb(250, 250, 250);
-    width: 100%;
-    border-radius: 5px;
-    border: none;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-.loading-bar-front{
-    position: absolute;
-    height: 8px;
-    background-color:  rgba(68, 6, 104, 0.87);
-    width: 0%;
-    border-radius: 5px;
-    border: none;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-.social-icon{
-    padding: 0;
-    margin: 0;
-    width: 50%;
-}
-.social-media{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-image: url(/asset/images/865f68effd27bbebbf6c1aa6af13ec7a.jpeg); */
+    /* background-position: center; */
+    /* background-size: cover; */
 }
+
+a {
+    text-decoration: none;
+    outline: none;
+    color: black;
+}
+
+a:active {
+    color: black;
+}
+
+.container {
+    width: 95%;
+    height: 95%;
+    border: 3px solid black;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 32px 1fr 32px;
+    grid-template-areas:
+        "border-left main-content border-right";
+    overflow: auto;
+}
+
+.outer-grid {
+    width: 100%;
+    height: 100%;
+}
+
+#border-left {
+    grid-area: border-left;
+}
+
+#main-content {
+    grid-area: main-content;
+    /* border-left: 3px solid black;
+    border-right: 3px solid black; */
+}
+
+#border-right {
+    grid-area: border-right;
+}
+
+/* End Outer Grid  */
+
+/* ---------------------------------------------------------------------------- */
+
+
+/* Inner Grid */
+.inner-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 32px 54px 32px 1.5fr 32px 1fr 32px;
+    grid-template-areas:
+        "content-margin1"
+        "header"
+        "content-space1"
+        "main1"
+        "content-space2"
+        "main2"
+        "content-margin2";
+}
+
+.content-block-item {
+    width: 100%;
+    height: 100%;
+}
+
+#content-margin1 {
+    grid-area: content-margin1;
+    /* background-color: aqua; */
+}
+
+#header {
+    grid-area: header;
+    background: rgba(255, 255, 255, .1);
+    /* border: 3px solid black; */
+
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+        "logo nav";
+    align-items: center;
+}
+
+#content-space1 {
+    grid-area: content-space1;
+    /* background-color: crimson; */
+}
+
+
+#main1 {
+    grid-area: main1;
+    background-color: rgb(188, 240, 216);
+    border: 3px solid black;
+
+}
+
+#content-space2 {
+    grid-area: content-space2;
+}
+
+#main2 {
+    grid-area: main2;
+    background-color: rgb(253, 251, 108);
+    border: 3px solid black;
+
+
+}
+
+#content-margin2 {
+    grid-area: content-margin2;
+}
+
+/* End Inner Grid */
+
+
+
+
+
+/* --------------- End Begin sizing box------------------------  */
+
+/* TEXT AND LOGO */
+.logoContainter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    height: fit-content;
+    gap: 10px;
+    grid-area: logo;
+}
+
+#textLogo {
+    font-family: 'Clash Display';
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+/* END TEXT AND LOGO */
