--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,29 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  text-transform:lowercase;
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+html.light {
+  /* Light theme styles */
+  background-color: #fafafa ;
+  color: rgb(0, 0, 0);
+}
+
+html.dark {
+  /* Dark theme styles */
+  background-color: #0F0F0F;
+  color:  #fafafa ;
 }
