--- a/style.css
+++ b/style.css
@@ -78,4 +78,11 @@ body {
 
 header {
   padding-left: 50px;
+  padding-top: 5px;
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
 }
